removed dropdown, fixed word wrap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -290,6 +290,10 @@
 
   .declarations {
     font-size: 12px;
+
+    .soZboroviInput {
+      width: 600px;
+    }
   }
 }
 
@@ -326,8 +330,7 @@ input.mat-input-element {
   .buttons,
   .addButton,
   .deleteEntry,
-  .zabeleshkaHide,
-  .soZboroviInput {
+  .zabeleshkaHide {
     display: none;
   }
 
